// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxField Component renders and handles changes 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <div
      class="container"
    >
      <label
        class="label"
        data-testid="DATA-TEST-ID-0"
        for="checkbox-1"
        tabindex="0"
      >
        <div
          aria-label="Label 1"
          class="checkboxMarker"
          id="checkbox-1"
          role="checkbox"
        >
          <i
            class="icon"
            icon="fal,square"
          />
        </div>
        Label 1
      </label>
    </div>
  </div>
</div>
`;

exports[`CheckboxField Component renders and handles changes 2`] = `
<div>
  <div
    class="fieldGroup"
  >
    <div
      class="container"
    >
      <label
        class="label"
        data-testid="DATA-TEST-ID-0"
        for="checkbox-1"
        tabindex="0"
      >
        <div
          aria-label="Label 1"
          class="checkboxMarker"
          id="checkbox-1"
          role="checkbox"
        >
          <i
            class="icon"
            icon="fal,square"
          />
        </div>
        Label 1
      </label>
    </div>
  </div>
</div>
`;

exports[`CheckboxField Component renders with values in disabled highligted 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <div
      class="container"
    >
      <label
        class="label disabled highlighted"
        for="checkbox-3"
        tabindex="-1"
      >
        <div
          aria-label="Label 1"
          class="checkboxMarker disabled"
          id="checkbox-3"
          role="checkbox"
        >
          <i
            class="icon"
            icon="fas,square"
          />
        </div>
        Label 1
      </label>
      <label
        class="label disabled"
        for="checkbox-4"
        tabindex="-1"
      >
        <div
          aria-label="Label 2"
          class="checkboxMarker disabled"
          id="checkbox-4"
          role="checkbox"
        >
          <i
            class="icon"
            icon="fas,square"
          />
        </div>
        Label 2
      </label>
      <label
        class="label disabled"
        for="checkbox-5"
        tabindex="-1"
      >
        <div
          aria-label="Label 3"
          class="checkboxMarker disabled"
          id="checkbox-5"
          role="checkbox"
        >
          <i
            class="icon"
            icon="fas,square"
          />
        </div>
        Label 3
      </label>
    </div>
  </div>
</div>
`;

exports[`CheckboxField Component renders with values in readonly 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <div
      class="container"
    >
      <label
        class="label readOnly"
        for="checkbox-2"
        tabindex="-1"
      >
        <div
          aria-label="Label 1"
          class="checkboxMarker readOnly"
          id="checkbox-2"
          role="checkbox"
        >
          <i
            class="icon"
            icon="fas,square"
          />
        </div>
        Label 1
      </label>
    </div>
  </div>
</div>
`;

exports[`CheckboxField Component renders with values with fieldSize and inline 1`] = `
<div>
  <div
    class="fieldGroup size-6 inline"
  >
    <div
      class="container inlineContainer"
    >
      <label
        class="label inlineLabel"
        for="checkbox-6"
        tabindex="0"
      >
        <div
          aria-label="Label 1"
          class="checkboxMarker"
          id="checkbox-6"
          role="checkbox"
        >
          <i
            class="icon"
            icon="fal,square"
          />
        </div>
        Label 1
      </label>
    </div>
  </div>
</div>
`;
